--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,14 @@
 
 
-@import url(https://fonts.googleapis.com/css?family=Roboto+Mono:400,700);
+@import url(https://fonts.googleapis.com/css?family=Roboto:400,700);
 
 /* Based on Base16 Eighties Colorscheme by Chris Kempson (http://chriskempson.com) */
 
 /* Code */
-pre {
+pre, code, .category {
+    line-height: 1.2 !important;
     padding: 8px !important;
+    font-family: "Source Code Pro", monospace !important;
     overflow-x: auto !important;
 }
 
@@ -56,12 +58,13 @@ body {
 
 article.single section,
 .article-list article {
+  font-family: "Roboto", monospace !important;
   background-color: #f2f0ec;
   color: #2d2d2d;
   padding-left: 128px;
-  padding-left: 8rem;
+  padding-left: 4rem;
   padding-right: 128px;
-  padding-right: 8rem;
+  padding-right: 4rem;
   padding-top: 16px;
   padding-top: 1rem;
   padding-bottom: 16px;
